--- a/examples/bash/config.json
+++ b/examples/bash/config.json
@@ -4,7 +4,8 @@
     "env": [],
     "install": [],
     "script": [
-      "myscript"
+      "echo 'Hello, world'",
+      "./myscript"
     ]
   }
 }
