--- a/examples/python3/config.json
+++ b/examples/python3/config.json
@@ -3,10 +3,10 @@
     "language": "python",
     "env": [],
     "install": [
-      "pip install -r requirements.txt"
+      "pip3 install -r requirements.txt"
     ],
     "script": [
-      "python -m unittest"
+      "python3 -m unittest"
     ]
   }
 }
