--- a/images/general/Dockerfile
+++ b/images/general/Dockerfile
@@ -5,6 +5,7 @@ RUN apt update && \
         build-essential \
         golang \
         nodejs \
+        openjdk-11-jdk \
         python3 \
         python3-pip \
     && apt-get clean
